--- a/int_wirecard/cartridge/templates/resources/wirecard_de.properties
+++ b/int_wirecard/cartridge/templates/resources/wirecard_de.properties
@@ -1,19 +1,23 @@
 # Site Preferences
 checkout.wirecard.displaytext=Ihre Bestellung bei <shop> - Bestellnummer {0}
-checkout.wirecard.customerstatement=Ihre Bestellung bei <shop> - Bestellnummer {0}
-checkout.wirecard.orderdescription=Bestellnummer {0}
+checkout.wirecard.customerstatement=[Shopname] [orderReference]
+checkout.wirecard.orderdescription={0}, {1} {2}
 
 # Template: paymentmethods.isml and wirecarderrormessage.isml
 checkout.wirecard.select.description=Die Bezahlung der Bestellung erfolgt nach Anzeige der Bestellzusammenfassung.
-checkout.wirecard.failure=Es ist ein Fehler aufgetreten und die Bezahlung konnte nicht abgeschlossen werden. Bitte kontaktieren Sie unseren Kundenservice, versuchen es noch einmal oder w‰hlen eine andere Zahlart aus.
-checkout.wirecard.cancel=Sie haben die Zahlung auf unserem Bezahlserver abgebrochen. Um die Bestellung abzuschlieﬂen versuchen Sie es bitte noch einmal, oder w‰hlen Sie eine andere Zahlart aus.
+checkout.wirecard.failure=Es ist ein Fehler aufgetreten und die Bezahlung konnte nicht abgeschlossen werden. Bitte kontaktieren Sie unseren Kundenservice, versuchen es noch einmal oder w√§hlen eine andere Zahlart aus.
+checkout.wirecard.cancel=Sie haben die Zahlung auf unserem Bezahlserver abgebrochen. Um die Bestellung abzuschlie√üen versuchen Sie es bitte noch einmal, oder w√§hlen Sie eine andere Zahlart aus.
 checkout.wirecard.error=Es ist ein Fehler aufgetreten und die Bezahlung konnte nicht abgeschlossen werden. Bitte kontaktieren Sie unseren Kundenservice oder versuchen es noch einmal.
-checkout.wirecard.sessiontimeout=ACHTUNG: Aufgrund eines Timeouts ihrer Nutzersession, wurde der Warenkorb wiederhergestellt. Aus Datenschutzgr¸nden m¸ssen Sie sich ggf. wieder anmelden und/oder Geschenkgutscheine neu eingeben.
+checkout.wirecard.sessiontimeout=ACHTUNG: Aufgrund eines Timeouts ihrer Nutzersession, wurde der Warenkorb wiederhergestellt. Aus Datenschutzgr√ºnden m√ºssen Sie sich ggf. wieder anmelden und/oder Geschenkgutscheine neu eingeben.
+
+# Template: wirecardpendingpayment.isml
+checkout.wirecard.pendingpayment.headline=Ihre Zahlung wurde vom Finanzinstitut noch nicht best√§tigt
+checkout.wirecard.pendingpayment.message=Die Zahlungsbest√§tigung ist ausst√§ndig, sie wird sp√§ter zugesendet.
 
 # Template: wirecardforward.isml
 checkout.wirecard.forward.text=Sie werden zu unserem Zahlungsserver weitergeleitet. Falls Sie nicht automatisch weitergeleitet werden, klicken Sie bitte den Button.
 checkout.wirecard.forward.send=Zur Bezahlung
 
 # Template: wirecardresponse.isml
-checkout.wirecard.response.text=Sie werden zur Bestellbest‰tigungsseite weitergeleitet. Falls Sie nicht automatisch weitergeleitet werden, klicken Sie bitte den Button.
-checkout.wirecard.response.send=Zur Bestellbest‰tigung
+checkout.wirecard.response.text=Sie werden zur Bestellbest√§tigungsseite weitergeleitet. Falls Sie nicht automatisch weitergeleitet werden, klicken Sie bitte den Button.
+checkout.wirecard.response.send=Zur Bestellbest√§tigung
